fixing overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,6 +4,8 @@
 
 body{
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 .header{
     text-align: center;
